--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -10,7 +10,7 @@
 # https://github.com/marketplace/actions/bandit-scan is ISC licensed, by abirismyname
 # https://pypi.org/project/bandit/ is Apache v2.0 licensed, by PyCQA
 
-name: Bandit
+name: Security Scanning
 on:
   push:
     branches: [ "main" ]
@@ -21,7 +21,7 @@ on:
     - cron: '26 22 * * 2'
 
 jobs:
-  bandit:
+  security_scanning:
     permissions:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
@@ -49,4 +49,22 @@ jobs:
           # skips: # optional, default is DEFAULT
           # path to a .bandit file that supplies command line arguments
           # ini_path: # optional, default is DEFAULT
+
+      # Run SafetyCLI Scan (Check for known vulnerabilities in dependencies)
+      - uses: pyupio/safety-action@v1
+        name: Safety Scan
+        with:
+          api-key: ${{ secrets.SAFETY_API_KEY }}
+
+      # Convert Safety results to SARIF and upload (if using a script or another tool)
+      - name: Upload Safety results to Code Scanning Alerts
+        if: success() # Only run if Safety scan succeeds
+        run: |
+          # Convert Safety output to SARIF format (you would need a script for this)
+          python convert_safety_to_sarif.py safety_output.json safety_output.sarif
+          
+          # Upload the SARIF results
+          uses: github/codeql-action/upload-sarif@v2
+          with:
+            sarif_file: safety_output.sarif
 
